# honest-profiler

./: .bowerrc  .clang-format  .gitignore  .travis.yml  ATTRIBUTIONS  AUTHORS  CMakeLists.txt  Eclipse_Neon_4.6.2_PHRX_Formatter.xml  LICENSE  Makefile  README.md  TODO  UI-README.md  bower.json  build.gradle  example.hpl  package.json  pom.xml  run-example.sh  settings.gradle  test.sh
gradle/wrapper/: gradle-wrapper.properties
src/assembly/: zip.xml
src/main/cpp/: agent.cc  agent.cpp  circular_queue.cpp  circular_queue.h  common.cpp  common.h  concurrent_map.cpp  concurrent_map.h  control.cpp  controller.cpp  controller.h  globals.h  log_writer.cpp  log_writer.h  processor.cc  processor.cpp  processor.h  profiler.cc  profiler.cpp  profiler.h  signal_handler.cpp  signal_handler.h  stacktraces.h  thread_map.cpp  thread_map.h  trace.h
src/main/java/: AgentApiExample.java  Example.java  InfiniteExample.java
src/main/java/com/insightfullogic/honest_profiler/: Console.java  HonestProfilerEntry.java  RootMarker.java
src/main/java/com/insightfullogic/honest_profiler/adapters/: LoggerInjector.java
src/main/java/com/insightfullogic/honest_profiler/adapters/machines/: LocalMachineFinder.java  WebSocketMachineFinder.java  package-info.java
src/main/java/com/insightfullogic/honest_profiler/adapters/source/: LocalMachineFinder.java  WebSocketMachineFinder.java  package-info.java
src/main/java/com/insightfullogic/honest_profiler/adapters/sources/: LocalMachineFinder.java  LocalMachineFindingAgent.java  LocalMachineSource.java  ThreadedAgent.java  WebSocketMachineFinder.java  WebSocketMachineSource.java  package-info.java
src/main/java/com/insightfullogic/honest_profiler/collector/: FlatProfileEntry.java  LogCollector.java  NodeCollector.java  Profile.java  ProfileListener.java  ProfileNode.java  ProfileTree.java  ProfileTreeNode.java
src/main/java/com/insightfullogic/honest_profiler/console/: ConsoleEntry.java  ConsoleUserInterface.java
src/main/java/com/insightfullogic/honest_profiler/core/: Box.java  Conductor.java  DataConsumer.java  LogConsumer.java  MachineListener.java  Monitor.java  ProfileListener.java  ProfileUpdateModerator.java  ThreadedAgent.java  package-info.java
src/main/java/com/insightfullogic/honest_profiler/discovery/: DiscoveryService.java  JavaVirtualMachine.java  VirtualMachineListener.java
src/main/java/com/insightfullogic/honest_profiler/javafx/: CellValues.java  FlatProfileController.java  FlatViewModel.java  JavaFXEntry.java  Listeners.java  Loader.java  PicoFXLoader.java  ProfileController.java  ProfileListenerProvider.java  ProfileViewModel.java  ProfileWindow.java  Rendering.java  SceneLoader.java  TreeNodeAdapter.java  TreeProfileController.java  TreeViewCell.java  TreeViewModel.java  UserInterfaceConfigurationException.java  WindowViewModel.java
src/main/java/com/insightfullogic/honest_profiler/log/: EventListener.java  IEventListener.java  LogEvent.java  LogParser.java  Method.java  ParseException.java  StackFrame.java  TraceStart.java
src/main/java/com/insightfullogic/honest_profiler/ports/: Flamegraph.java  LoggerInjector.java
src/main/java/com/insightfullogic/honest_profiler/user_interface/: UserInterface.java
src/main/java/com/insightfullogic/honest_profiler/util/: Listeners.java
src/main/proto/: messages.proto
src/main/resources/com/insightfullogic/honest_profiler/javafx/: FlatProfileView.fxml  LandingView.fxml  ProfileView.fxml  TraceCountView.fxml  TreeProfileView.fxml
src/main/scripts/: console  dump-flamegraph  gui
src/main/webapp/app/: Root.java  index.html
src/main/webapp/app/css/: app.css
src/main/webapp/app/js/: app.js  controllers.js  directives.js  filters.js  services.js
src/main/webapp/app/partials/: about.html  home.html  profileNode.html
src/test/cpp/: fixtures.h  ostreambuf.h  test.cpp  test.h  test_agent.cpp  test_circular_queue.cpp  test_log_writer.cpp  test_maps.cpp  test_misc.cpp  test_profiler_config.cpp  test_thread_map.cpp
src/test/java/com/insightfullogic/examples/: LargeStacktracesExample.java  SleepingThreadExample.java
src/test/java/com/insightfullogic/honest_profiler/: FakeConsole.java  ProfileFixtures.java
src/test/java/com/insightfullogic/honest_profiler/adapters/: WebSocketMachineFinderTest.java  WebSocketMachineSourceTest.java
src/test/java/com/insightfullogic/honest_profiler/collector/: FakeProfileListener.java  FlatProfileTest.java  ProfileTreeTest.java
src/test/java/com/insightfullogic/honest_profiler/console/: ConsoleApplicationRunner.java  ConsoleEndToEndTest.java  ConsoleUserInterfaceTest.java
src/test/java/com/insightfullogic/honest_profiler/core/: ConductorTest.java  FlatGenerator.java  LeanLogCollectorDriver.java  LeanProfileGenerator.java  LogConsumerTest.java  Logs.java  TreeGenerator.java  Util.java
src/test/java/com/insightfullogic/honest_profiler/discovery/: JavaVirtualMachineTest.java
src/test/java/com/insightfullogic/honest_profiler/framework/: AggregationUtil.java  LeanLogCollectorDriver.java  LogEventFactory.java  ParameterUtil.java
src/test/java/com/insightfullogic/honest_profiler/javafx/: JavaFxEndToEndTest.java
src/test/java/com/insightfullogic/honest_profiler/log/: ConcurrentLogParserTest.java  FakeEventListener.java  LogParserTest.java  Logs.java  ReaderThread.java
src/test/java/com/insightfullogic/honest_profiler/ports/: WebSocketMachineSourceTest.java
src/test/java/com/insightfullogic/honest_profiler/system_tests/: AgentIntegrationTest.java  AgentRunner.java
src/test/java/com/insightfullogic/honest_profiler/test_client/: ApplicationRunner.java  HonestProfilerUIEndToEndTest.java
src/test/java/com/insightfullogic/honest_profiler/testing_utilities/: AgentRunner.java  LargeStacktracesExample.java  NonInteractiveAgentRunner.java  ProfileFixtures.java  SleepingThreadExample.java  VirtualMachineFixtures.java
src/test/resources/: example.hpl  log0.hpl  log1.hpl
src/test/webapp/: karma.conf.js
src/test/webapp/unit/: controllersSpec.js  directivesSpec.js  filtersSpec.js  servicesSpec.js
(+579 files in other folders)
